(library
 (name ppx_router)
 (modules :standard \ ppx_router_runtime ppx_router_test)
 (wrapped false)
 (public_name ppx_router)
 (libraries uri ppxlib containers ppx_deriving_json.native)
 (kind ppx_deriver)
 (ppx_runtime_libraries ppx_router.runtime)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (name ppx_router_runtime)
 (modules ppx_router_runtime)
 (public_name ppx_router.runtime)
 (libraries containers dream routes ppx_deriving_json.native_runtime))

(executable
 (name ppx_router_test)
 (modules ppx_router_test)
 (libraries ppx_router))
