(library
 (name ppx_deriving_router)
 (modules :standard \ ppx_deriving_router_test)
 (wrapped false)
 (public_name ppx_deriving_router)
 (libraries uri ppxlib containers melange-json-native.ppx)
 (kind ppx_deriver)
 (preprocess
  (pps ppxlib.metaquot)))

(executable
 (name ppx_deriving_router_test)
 (modules ppx_deriving_router_test)
 (libraries ppx_deriving_router))
