(library
 (name test)
 (modes melange)
 (libraries melange-fetch)
 (preprocess
  (pps melange.ppx ppx_deriving_router.browser ppx_deriving_json.browser)))

(melange.emit
 (alias js)
 (target js)
 (modules)
 (libraries test)
 (module_systems commonjs))

(cram
 (deps ./js/test_browser/test.js))

(copy_files#
 (files ../test/routing.ml))
