(library
 (name test)
 (modes melange)
 (libraries melange-fetch)
 (preprocess
  (pps melange.ppx ppx_deriving_router.browser ppx_deriving_json.browser)))

(melange.emit
 (alias js)
 (target js)
 (modules)
 (libraries test)
 (module_systems commonjs))

(cram
 (deps ./js/browser/test/test.js))

(copy_files#
 (files ../../native/test/routing.ml))
